# ump3d

./: .gitignore  README.md
lib/win/: magic.lib  magic3d.lib  magic3d_x64.lib  magic_x64.lib
lib/win/doc/eng/: API.chm  Wrapper.chm
lib/win/doc/rus/: API.chm  Wrapper.chm
src/: CMakeLists.txt  Magic.h  MagicParticleEffect.cpp  MagicParticleEffect.h  MagicParticleEmitter.cpp  MagicParticleEmitter.h  Urho3DMagicParticles.pro  main.cpp
