project (Urho3DMagicParticles)
set (TARGET_NAME Urho3DMagicParticles)
set (ENV{URHO3D_HOME} C:/Dev/Urho3D/build)
set (CMAKE_MODULE_PATH C:/Dev/Urho3D/CMake/Modules)
set (LIB_DIR "../lib/win")
configure_file(bin/magic3d_x64.dll bin/magic3d_x64.dll COPYONLY)

cmake_minimum_required (VERSION 2.8.6)
if (COMMAND cmake_policy)
    cmake_policy (SET CMP0003 NEW)
    if (CMAKE_VERSION VERSION_GREATER 2.8.12 OR CMAKE_VERSION VERSION_EQUAL 2.8.12)
        cmake_policy (SET CMP0022 NEW)
    endif ()
    if (CMAKE_VERSION VERSION_GREATER 3.0.0 OR CMAKE_VERSION VERSION_EQUAL 3.0.0)
        cmake_policy (SET CMP0026 OLD)
        cmake_policy (SET CMP0042 NEW)
    endif ()
endif ()
add_definitions(-DMAGIC_3D -DSHADER_ALPHATEST_WRAP)
include (Urho3D-CMake-common)
find_package (Urho3D REQUIRED)
include_directories (${URHO3D_INCLUDE_DIRS})
define_source_files ()
setup_main_executable ()
link_directories(${LIB_DIR})
target_link_libraries(${TARGET_NAME} ${LIB_DIR}/magic3d_x64)



